1.remove migrations folder & add it to .gitignore 2.change ideas display, now the most like post will be on top 3.config.py change 'bcrypt = Bcrypt(app)' to 'Bcrypt = Bcrypt(app)'

--- a/templates/bright_ideas.html
+++ b/templates/bright_ideas.html
@@ -82,7 +82,7 @@ h2 {
             {% endwith %}
         </div>
         
-        {% for post in posts|reverse %}
+        {% for post in posts %}
             <div class="posts">
                 <h6><a href="/user/{{ post.user_id }}">{{ post["user"].alias }} says:</a></h6>
                 <h6>{{ post['content'] }}</h6>
